Fix GitHub Pages deployment issues

--- a/package.json
+++ b/package.json
@@ -38,5 +38,5 @@
     "typescript-eslint": "^7.1.0",
     "vite": "^5.1.4"
   },
-  "homepage": "https://kodekenobi.github.io/kodekenobi.github.io/"
+  "homepage": "https://kodekenobi.github.io/"
 }
